--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ dependencies = [
     "typer[all]>=0.12.3",
     "numpy (>=1.26.0,<1.27.0)",
     "google-generativeai>=0.8.0",
+    "torch>=2.3.1",
+    "transformers>=4.41.2",
+    "qwen-vl-utils>=0.0.3",
+    "accelerate>=0.30.1",
+    "vllm>=0.5.3.post1",
+    "requests>=2.32.3",
 ]
 
 [tool.poetry]
