--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "typer[all]>=0.12.3",
     "numpy (>=1.26.0,<1.27.0)",
     "google-generativeai>=0.8.0",
-    "torch>=2.3.1",
+    "torch>=2.0.0",
+    "torchvision>=0.15.0",
     "transformers>=4.41.2",
     "qwen-vl-utils>=0.0.3",
     "accelerate>=0.30.1",
@@ -24,6 +25,10 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "image_rec_mod", from = "src"}]
 
+[[tool.poetry.source]]
+name = "pytorch-gpu"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -33,3 +38,4 @@ build-backend = "poetry.core.masonry.api"
 [project.scripts]
 image-recog = "image_rec_mod.cli:app"
 test-local = "image_rec_mod.local_test:test_image_folder"
+ 
