--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,41 +1,38 @@
-[project]
+[tool.poetry]
 name = "image-recog"
 version = "0.1.0"
 description = "A project to extract runner numbers from images."
-authors = [
-    {name = "Roo"}
-]
+authors = ["Roo"]
 readme = "README.md"
-requires-python = "^3.9"
-dependencies = [
-    "pytesseract>=0.3.10",
-    "Pillow>=9.5.0",
-    "typer[all]>=0.12.3",
-    "numpy (>=1.26.0,<1.27.0)",
-    "google-generativeai>=0.8.0",
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-    "transformers>=4.41.2",
-    "qwen-vl-utils>=0.0.3",
-    "accelerate>=0.30.1",
-    "vllm>=0.5.3.post1",
-    "requests>=2.32.3",
-]
-
-[tool.poetry]
 packages = [{include = "image_rec_mod", from = "src"}]
 
+[tool.poetry.dependencies]
+python = ">=3.10,<3.14"
+pytesseract = ">=0.3.10"
+Pillow = ">=9.5.0"
+typer = {extras = ["all"], version = ">=0.12.3"}
+numpy = ">=1.26.0,<2.0.0"
+google-generativeai = ">=0.8.0"
+transformers = ">=4.41.2"
+qwen-vl-utils = ">=0.0.3"
+accelerate = ">=0.30.1"
+vllm = ">=0.11.0"
+requests = ">=2.32.3"
+num2words = ">=0.5.14,<0.6.0"
+
 [[tool.poetry.source]]
-name = "pytorch-gpu"
-url = "https://download.pytorch.org/whl/cu121"
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
 priority = "explicit"
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+[tool.poetry.scripts]
+image-recog = "image_rec_mod.cli:app"
+local-test = "image_rec_mod.local_test:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-
-[project.scripts]
-image-recog = "image_rec_mod.cli:app"
-test-local = "image_rec_mod.local_test:test_image_folder"
- 
